Added messages partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
 
   <body>
     <%= render 'layouts/navbar' %>
+    <div class="container">
+      <%= render 'layouts/messages' %> 
 
-
-
-
-    <%= yield %>
+      <%= yield %>
+    </div>
   </body>
 </html>
