--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,31 +1,38 @@
-<p id="notice"><%= notice %></p>
+<div class="card px-3 py-3">
+  <div class="row">
+    <div class="col-10">
+      <h1>Posts</h1>
+    </div>
 
-<h1>Posts</h1>
+    <div class="col-2">
+      <%= link_to 'New Post', new_post_path, class: 'btn btn-success' %>
+    </div>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Author</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Content</th>
+        <th>Author</th>
+        <th colspan="3">Options</th>
+      </tr>
+    </thead>
 
-  <tbody>
+    <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.title %></td>
+        <td><%= link_to post.title, post_path(post) %></td>
         <td><%= post.content %></td>
-        <td><%= post.author_id %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to post.author.name, author_path(post.author) %></td>
+        <td>
+          <%= link_to 'Show', post, class: 'btn btn-info' %>
+          <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-primary' %>
+          <%= link_to 'Delete', post, class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
 
-<br>
-
-<%= link_to 'New Post', new_post_path %>
