Updated author new,edit and _form view styles

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Post</h1>
+<%= link_to 'Back', posts_path, class: 'btn btn-outline-secondary mb-4' %>
 
-<%= render 'form', post: @post %>
+<div class="row">
+  <div class="col"></div>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+  <div class="card p-2">
+    <div class="col text-center">
+      <h1>Editing Post</h1>
+      <br/>
+      <%= render 'form', post: @post %>
+    </div>
+  </div>
+
+  <div class="col"></div>
+</div>
