--- a/app/views/posts/authorPost.html.erb
+++ b/app/views/posts/authorPost.html.erb
@@ -17,7 +17,12 @@
 <% @posts.each do |post| %>
   <div class="card mb-3">
     <div class="card-body">
-      <h5 class="card-title"><%= post.title %></h5>
+      <h5 class="card-title">
+        <%= post.title %> -
+        <small> 
+          Published <%= time_ago_in_words(post.created_at) %> ago
+        </small> 
+      </h5>
       <hr>
       <p class="card-text"><%= post.content %></p>
     </div>
