--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,7 +23,7 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= link_to post.title, post_path(post) %></td>
-        <td><%= post.content %></td>
+        <td><%= truncate(post.content, length: 20) %></td>
         <td><%= link_to post.author.name, author_path(post.author) %></td>
         <td>
           <%= link_to 'Show', post, class: 'btn btn-info' %>
